<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
     >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/ic_baseline_person_24">

            </TextView>

            <TextView
                android:id="@+id/tvadddetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvlogo"
                android:layout_centerHorizontal="true"
                android:text="@string/add_new_employee"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
  >

        <TextView
            android:id="@+id/tvtitle"
            style="@style/custome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title">

        </TextView>

        <Button
            android:id="@+id/button"
            style="@style/button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/select_option" />

        <TextView
            android:id="@+id/tvfirstname"
            style="@style/custome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvtitle"
            android:text="@string/enter_the_first_name" />

        <EditText
            android:id="@+id/etfirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/custome_edit_text"
            android:layout_toEndOf="@+id/tvfirstname"
            android:layout_below="@+id/button"
            android:hint="@string/enter_the_name_hint" />

        <TextView
            android:id="@+id/tvlastname"
            style="@style/custome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvfirstname"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/custome_edit_text"
            android:layout_toEndOf="@+id/tvfirstname"
            android:layout_below="@+id/etfirstname"
            android:hint="@string/enter_the_last_name" />

        <TextView
            android:id="@+id/tvworkemail"
            style="@style/custome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvlastname"
            android:text="@string/work_email_id" />

        <EditText
            android:id="@+id/etworkemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/custome_edit_text"
            android:layout_toEndOf="@+id/tvfirstname"
            android:layout_below="@+id/etLastName"
            android:hint="@string/enter_the_work_email_id" />

        <TextView
            android:id="@id/tvmessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_also_used_as_login_for_cokehp"
            android:layout_below="@+id/etworkemail"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="Conform Details"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvmessage"/>

    </RelativeLayout>

</LinearLayout>